[package]
name = "findex"
description = "Recursively index files and store results in a sqlite database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.3"
clap = { version = "4.1.8", features = ["derive"] }
color-eyre = "0.6.2"
flamegraph = "0.6.2"
rusqlite = { version = "0.28.0", features = ["bundled"] }
sha256 = "1.1.2"
walkdir = "2"
