[package]
name = "findex"
description = "Recursively index files and store results in a sqlite database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.6"
clap = { version = "4.3.21", features = ["derive"] }
color-eyre = "0.6.2"
flamegraph = "0.6.3"
rusqlite = { version = "0.29.0", features = ["bundled"] }
sha256 = "1.1.5"
walkdir = "2"
